fix spacing between sidebar items

--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -158,9 +158,7 @@
       padding-left: 48px;
 
       li > a {
-        height: 44px;
-        display: flex;
-        align-items: center;
+        padding: 10px 0;
       }
     }
   }
